--- a/pf-exporter-test/src/main/webapp/faces/pages/dataTableNonLazy.xhtml
+++ b/pf-exporter-test/src/main/webapp/faces/pages/dataTableNonLazy.xhtml
@@ -7,14 +7,17 @@
 	template="../template.xhtml">
 	<ui:define name="content">
 		<h:form>
-			<p:commandButton value="Export" ajax="false">
+			<p:commandButton value="Export CSV" ajax="false">
 				<l:dataExporter source="table" fileType="csv" fileName="cars"/>
+			</p:commandButton>
+			<p:commandButton value="Export XML" ajax="false">
+				<l:dataExporter source="table" fileType="xml" fileName="cars"/>
 			</p:commandButton>
 		
 			<p:dataTable id="table" var="car" value="#{nonLazyTableBean.cars}">
 				<p:column>
 					<f:facet name="header">
-						<h:outputText value="Make" />
+						<h:outputText value="Make (i.e. Manufacturer)" />
 					</f:facet>
 					<h:outputText value="#{car.make}" />
 				</p:column>
