--- a/pf-exporter-test/src/main/webapp/faces/pages/treeTable.xhtml
+++ b/pf-exporter-test/src/main/webapp/faces/pages/treeTable.xhtml
@@ -13,6 +13,9 @@
 			<p:commandButton value="Export XML" ajax="false">
 				<l:dataExporter source="treeTable" fileType="xml" fileName="documents"/>
 			</p:commandButton>
+			<p:commandButton value="Export PDF" ajax="false">
+				<l:dataExporter source="treeTable" fileType="pdf" fileName="documents"/>
+			</p:commandButton>
 			
 			<p:treeTable id="treeTable" value="#{treeTableBean.root}" var="document">
 				<p:column>
