--- a/pf-exporter-test/src/main/webapp/faces/pages/dataTableGrouping.xhtml
+++ b/pf-exporter-test/src/main/webapp/faces/pages/dataTableGrouping.xhtml
@@ -16,6 +16,9 @@
 			<p:commandButton value="Export PDF" ajax="false">
 				<l:dataExporter source="table" fileType="pdf" fileName="cars"/>
 			</p:commandButton>
+			<p:commandButton value="Export XLS" ajax="false">
+				<l:dataExporter source="table" fileType="xls" fileName="cars"/>
+			</p:commandButton>
 		
 			<p:dataTable id="table" var="sale" value="#{dataTableGroupingBean.sales}">
 				<p:columnGroup type="header">
