--- a/pf-exporter-test/src/main/webapp/faces/pages/treeTable.xhtml
+++ b/pf-exporter-test/src/main/webapp/faces/pages/treeTable.xhtml
@@ -16,6 +16,9 @@
 			<p:commandButton value="Export PDF" ajax="false">
 				<l:dataExporter source="treeTable" fileType="pdf" fileName="documents"/>
 			</p:commandButton>
+			<p:commandButton value="Export XLS" ajax="false">
+				<l:dataExporter source="treeTable" fileType="xls" fileName="document"/>
+			</p:commandButton>
 			
 			<p:treeTable id="treeTable" value="#{treeTableBean.root}" var="document">
 				<p:column>
