Let the ExportType determine the file extension and MIME type, in case it supports multiple extensions/MIME types. Add XLSX support to the Excel exporter.

--- a/pf-exporter-test/src/main/webapp/faces/pages/treeTable.xhtml
+++ b/pf-exporter-test/src/main/webapp/faces/pages/treeTable.xhtml
@@ -16,8 +16,8 @@
 			<p:commandButton value="Export PDF" ajax="false">
 				<l:dataExporter source="treeTable" fileType="pdf" fileName="documents"/>
 			</p:commandButton>
-			<p:commandButton value="Export XLS" ajax="false">
-				<l:dataExporter source="treeTable" fileType="xls" fileName="document"/>
+			<p:commandButton value="Export XLSX" ajax="false">
+				<l:dataExporter source="treeTable" fileType="excel" fileName="document"/>
 			</p:commandButton>
 			
 			<p:treeTable id="treeTable" value="#{treeTableBean.root}" var="document">
