--- a/pf-exporter-test/src/main/webapp/faces/pages/dataTablePaginated.xhtml
+++ b/pf-exporter-test/src/main/webapp/faces/pages/dataTablePaginated.xhtml
@@ -16,8 +16,8 @@
 			<p:commandButton value="Export PDF" ajax="false">
 				<l:dataExporter source="table" fileType="pdf" fileName="cars" sourceOptions="#{nonLazyTableBean.DTPageOnly}"/>
 			</p:commandButton>
-			<p:commandButton value="Export XLS" ajax="false">
-				<l:dataExporter source="table" fileType="xls" fileName="cars"/>
+			<p:commandButton value="Export XLSX" ajax="false">
+				<l:dataExporter source="table" fileType="excel" fileName="cars"/>
 			</p:commandButton>
 		
 			<p:dataTable id="table" var="car" value="#{nonLazyTableBean.cars}" rows="5" paginator="true">
