--- a/jsf-exporter-test/src/main/webapp/faces/template.xhtml
+++ b/jsf-exporter-test/src/main/webapp/faces/template.xhtml
@@ -27,6 +27,7 @@
 	</h:head>
 
 	<body>
+		<h:link outcome="/faces/index.xhtml" value="Back to menu" />
 		<ui:insert name="content"/>
 	</body>
 </html>
