Add support for h:dataTable

--- a/jsf-exporter-test/src/main/webapp/faces/index.xhtml
+++ b/jsf-exporter-test/src/main/webapp/faces/index.xhtml
@@ -28,6 +28,7 @@
 		<ul>
 			<li><h:link outcome="/faces/pages/dataTableI18N.xhtml" value="non-ASCII characters" /></li>
 			<li><h:link outcome="/faces/pages/hPanelGrid.xhtml" value="h:panelGrid" /></li>
+			<li><h:link outcome="/faces/pages/hDataTable.xhtml" value="h:dataTable" /></li>
 			
 			<li><h:link outcome="/faces/pages/dataTableGrouping.xhtml" value="p:dataTable with p:columnGroup" /></li>
 			<li><h:link outcome="/faces/pages/dataTableLazy.xhtml" value="p:dataTable with lazy loading" /></li>
