Issue #21: add support for rich:dataTable

--- a/jsf-exporter-test/src/main/webapp/faces/index.xhtml
+++ b/jsf-exporter-test/src/main/webapp/faces/index.xhtml
@@ -30,6 +30,9 @@
 			<li><h:link outcome="/faces/pages/hPanelGrid.xhtml" value="h:panelGrid" /></li>
 			<li><h:link outcome="/faces/pages/hDataTable.xhtml" value="h:dataTable" /></li>
 			
+			<li><h:link outcome="/faces/pages/richDataTable.xhtml" value="rich:dataTable" /></li>
+			<li><h:link outcome="/faces/pages/richDataTablePaginated.xhtml" value="rich:dataTable with pagination" /></li>
+			
 			<li><h:link outcome="/faces/pages/dataTableGrouping.xhtml" value="p:dataTable with p:columnGroup" /></li>
 			<li><h:link outcome="/faces/pages/dataTableLazy.xhtml" value="p:dataTable with lazy loading" /></li>
 			<li><h:link outcome="/faces/pages/dataTableNonLazy.xhtml" value="p:dataTable with normal loading" /></li>
