Re-organize test pages

--- a/jsf-exporter-test/src/main/webapp/faces/index.xhtml
+++ b/jsf-exporter-test/src/main/webapp/faces/index.xhtml
@@ -26,18 +26,18 @@
 	template="template.xhtml">
 	<ui:define name="content">
 		<ul>
-			<li><h:link outcome="/faces/pages/dataTableI18N.xhtml" value="non-ASCII characters" /></li>
-			<li><h:link outcome="/faces/pages/hPanelGrid.xhtml" value="h:panelGrid" /></li>
-			<li><h:link outcome="/faces/pages/hDataTable.xhtml" value="h:dataTable" /></li>
+			<li><h:link outcome="/faces/core/i18n.xhtml" value="non-ASCII characters" /></li>
+			<li><h:link outcome="/faces/core/panelGrid.xhtml" value="h:panelGrid" /></li>
+			<li><h:link outcome="/faces/core/dataTable.xhtml" value="h:dataTable" /></li>
 			
-			<li><h:link outcome="/faces/pages/richDataTable.xhtml" value="rich:dataTable" /></li>
-			<li><h:link outcome="/faces/pages/richDataTablePaginated.xhtml" value="rich:dataTable with pagination" /></li>
+			<li><h:link outcome="/faces/richfaces/dataTable.xhtml" value="rich:dataTable" /></li>
+			<li><h:link outcome="/faces/richfaces/dataTablePaginated.xhtml" value="rich:dataTable with pagination" /></li>
 			
-			<li><h:link outcome="/faces/pages/dataTableGrouping.xhtml" value="p:dataTable with p:columnGroup" /></li>
-			<li><h:link outcome="/faces/pages/dataTableLazy.xhtml" value="p:dataTable with lazy loading" /></li>
-			<li><h:link outcome="/faces/pages/dataTableNonLazy.xhtml" value="p:dataTable with normal loading" /></li>
-			<li><h:link outcome="/faces/pages/dataTablePaginated.xhtml" value="p:dataTable with pagination" /></li>
-			<li><h:link outcome="/faces/pages/treeTable.xhtml" value="p:treeTable" /></li>
+			<li><h:link outcome="/faces/primefaces/dataTableGrouping.xhtml" value="p:dataTable with p:columnGroup" /></li>
+			<li><h:link outcome="/faces/primefaces/dataTableLazy.xhtml" value="p:dataTable with lazy loading" /></li>
+			<li><h:link outcome="/faces/primefaces/dataTableNonLazy.xhtml" value="p:dataTable with normal loading" /></li>
+			<li><h:link outcome="/faces/primefaces/dataTablePaginated.xhtml" value="p:dataTable with pagination" /></li>
+			<li><h:link outcome="/faces/primefaces/treeTable.xhtml" value="p:treeTable" /></li>
 		</ul>
 	</ui:define>
 </ui:composition>
