--- a/jsf-exporter-test/src/main/webapp/faces/index.xhtml
+++ b/jsf-exporter-test/src/main/webapp/faces/index.xhtml
@@ -33,10 +33,15 @@
 			<li><h:link outcome="/faces/richfaces/dataTable.xhtml" value="rich:dataTable" /></li>
 			<li><h:link outcome="/faces/richfaces/dataTablePaginated.xhtml" value="rich:dataTable with pagination" /></li>
 			
+			<li><h:link outcome="/faces/primefaces/dataListDefinition.xhtml" value="p:dataList with type = definition" /></li>
+			<li><h:link outcome="/faces/primefaces/dataListLazy.xhtml" value="p:dataList with lazy loading" /></li>
+			<li><h:link outcome="/faces/primefaces/dataListPaginated.xhtml" value="p:dataList with pagination" /></li>
+			
 			<li><h:link outcome="/faces/primefaces/dataTableGrouping.xhtml" value="p:dataTable with p:columnGroup" /></li>
 			<li><h:link outcome="/faces/primefaces/dataTableLazy.xhtml" value="p:dataTable with lazy loading" /></li>
 			<li><h:link outcome="/faces/primefaces/dataTableNonLazy.xhtml" value="p:dataTable with normal loading" /></li>
 			<li><h:link outcome="/faces/primefaces/dataTablePaginated.xhtml" value="p:dataTable with pagination" /></li>
+			
 			<li><h:link outcome="/faces/primefaces/treeTable.xhtml" value="p:treeTable" /></li>
 		</ul>
 	</ui:define>
