Issue #24: when exporting UISelectOne (or any subclass), find the selected SelectItem and export the label attribute

--- a/jsf-exporter-test/src/main/webapp/faces/core/panelGrid.xhtml
+++ b/jsf-exporter-test/src/main/webapp/faces/core/panelGrid.xhtml
@@ -50,7 +50,9 @@
 					<f:param value="test"/>
 					<f:param value="h:outputFormat"/>
 				</h:outputFormat>
-				<h:outputText value="Bar2" />
+				<h:selectOneMenu value="#{panelGridBean.selectedChoice}">
+					<f:selectItems value="#{panelGridBean.selectOneChoices}" var="choice" itemLabel="#{choice.label}"/>
+				</h:selectOneMenu>
 				<h:outputText value="Baz2" />
 				
 				<h:outputText value="Foo3" />
