--- a/jsf-exporter-test/src/main/webapp/faces/primefaces/dataTableNonLazy.xhtml
+++ b/jsf-exporter-test/src/main/webapp/faces/primefaces/dataTableNonLazy.xhtml
@@ -61,21 +61,35 @@
 						</f:facet>
 					</p:cellEditor>
 				</p:column>
-				<p:column headerText="Price">
-					<p:cellEditor>
-						<f:facet name="output">
-							<h:panelGroup>
-								<h:outputText value="$" />
-								<h:outputText value="#{car.price}" />
-							</h:panelGroup>
-						</f:facet>
-						<f:facet name="input">
-							<p:inputText value="#{car.price}">
-								<f:validateLongRange minimum="1"/>
-							</p:inputText>
-						</f:facet>
-					</p:cellEditor>
-				</p:column>
+                <p:column headerText="Price">
+                    <p:cellEditor>
+                        <f:facet name="output">
+                            <h:panelGroup>
+                                <h:outputText value="$"/>
+                                <h:outputText value="#{nonLazyTableBean.formatPrize(car.price)}"/>
+                            </h:panelGroup>
+                        </f:facet>
+                        <f:facet name="input">
+                            <p:inputText value="#{car.price}">
+                                <f:validateLongRange minimum="1"/>
+                            </p:inputText>
+                        </f:facet>
+                    </p:cellEditor>
+                </p:column>
+                <p:column headerText="Price (Eur)">
+                    <p:cellEditor>
+                        <f:facet name="output">
+                            <h:panelGroup>
+                                <h:outputText value="#{nonLazyTableBean.formatPrize(car.price)}" converter="com.lapis.jsfexporter.CurrencyConverter"/>
+                            </h:panelGroup>
+                        </f:facet>
+                        <f:facet name="input">
+                            <p:inputText value="#{car.price}">
+                                <f:validateLongRange minimum="1"/>
+                            </p:inputText>
+                        </f:facet>
+                    </p:cellEditor>
+                </p:column>
 				<p:column headerText="Actions" exportable="false">
 					<p:rowEditor/>
 				</p:column>
