--- a/jsf-exporter-test/src/main/webapp/faces/primefaces/dataTableNonLazy.xhtml
+++ b/jsf-exporter-test/src/main/webapp/faces/primefaces/dataTableNonLazy.xhtml
@@ -90,6 +90,9 @@
                         </f:facet>
                     </p:cellEditor>
                 </p:column>
+                <p:column headerText="Button">
+                    <p:commandButton value="Click me!"/>
+                </p:column>
 				<p:column headerText="Actions" exportable="false">
 					<p:rowEditor/>
 				</p:column>
