--- a/jsf-exporter-test/src/main/webapp/faces/primefaces/dataTableNonLazy.xhtml
+++ b/jsf-exporter-test/src/main/webapp/faces/primefaces/dataTableNonLazy.xhtml
@@ -93,6 +93,12 @@
                 <p:column headerText="Button">
                     <p:commandButton value="Click me!"/>
                 </p:column>
+                <p:column headerText="Image - HTML" style="text-align: center;">
+                    <h:graphicImage library="images" name="image.png" alt="this is image's alt"/>
+                </p:column>
+                <p:column headerText="Image - Primefaces" style="text-align: center;">
+                    <p:graphicImage library="images" name="image2.gif"  alt="this is second image's alt"/>
+                </p:column>
 				<p:column headerText="Actions" exportable="false">
 					<p:rowEditor/>
 				</p:column>
