--- a/jsf-exporter-test/src/main/webapp/faces/index.xhtml
+++ b/jsf-exporter-test/src/main/webapp/faces/index.xhtml
@@ -37,6 +37,7 @@
 			<li><h:link outcome="/faces/primefaces/dataListLazy.xhtml" value="p:dataList with lazy loading" /></li>
 			<li><h:link outcome="/faces/primefaces/dataListPaginated.xhtml" value="p:dataList with pagination" /></li>
 			
+			<li><h:link outcome="/faces/primefaces/dataTableDynamic.xhtml" value="p:dataTable with dynamic columns" /></li>
 			<li><h:link outcome="/faces/primefaces/dataTableGrouping.xhtml" value="p:dataTable with p:columnGroup" /></li>
 			<li><h:link outcome="/faces/primefaces/dataTableLazy.xhtml" value="p:dataTable with lazy loading" /></li>
 			<li><h:link outcome="/faces/primefaces/dataTableNonLazy.xhtml" value="p:dataTable with normal loading" /></li>
